// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flash /> should close message 1`] = `
<DocumentFragment>
  <div
    class="styles__6gti4e6 styles_layerStyle__6gti4e0 styles_wrapper_status_default__6gti4e7 styles_layerStyle__6gti4e1"
  >
    Flash message
    <button
      class="styles_layerStyle__6gti4ec"
    >
      <svg
        aria-hidden="true"
        class="styles__19o76ju9 styles_layerStyle__19o76ju0 styles_icon_size_md__19o76juc styles_layerStyle__19o76ju3 styles_icon_variant_default__19o76juh styles_layerStyle__19o76ju8"
        data-slot="icon"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 18 18 6M6 6l12 12"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Flash /> should render default message 1`] = `
<DocumentFragment>
  <div
    class="styles__6gti4e6 styles_layerStyle__6gti4e0 styles_wrapper_status_default__6gti4e7 styles_layerStyle__6gti4e1"
  >
    Flash message
  </div>
</DocumentFragment>
`;

exports[`<Flash /> should render error message 1`] = `
<DocumentFragment>
  <div
    class="styles__6gti4e6 styles_layerStyle__6gti4e0 styles_wrapper_status_error__6gti4e8 styles_layerStyle__6gti4e2"
  >
    Flash message
  </div>
</DocumentFragment>
`;

exports[`<Flash /> should render success message 1`] = `
<DocumentFragment>
  <div
    class="styles__6gti4e6 styles_layerStyle__6gti4e0 styles_wrapper_status_success__6gti4e9 styles_layerStyle__6gti4e3"
  >
    Flash message
  </div>
</DocumentFragment>
`;
